# Akari

./: Akari.csproj  Akari.sln  App.axaml  App.axaml.cs  Cargo.toml
Akari/: Akari.csproj  App.axaml.cs  Program.cs  ViewLocator.cs
Akari.Books/: Akari.Books.csproj  Books.cs  Module.cs
Akari.Books/Views/: MainPage.axaml  MainPage.axaml.cs
Akari.Models/: Akari.Models.csproj  ISidebarElement.cs  ISidebarService.cs
Akari.Scribe/: Akari.Scribe.csproj  Module.cs  Scribe.cs  ScribingControl.cs
Akari.Scribe/Views/: MainPage.axaml  MainPage.axaml.cs
Akari.Settings/: Akari.Settings.csproj  Module.cs  Settings.cs
Akari.Settings/ViewModels/: MainPageViewModel.cs  ViewModelBase.cs
Akari.Settings/Views/: MainPage.axaml  MainPage.axaml.cs
Akari.Sidebar/: Akari.Sidebar.csproj  Module.cs  SidebarImpl.cs
Akari/ViewModels/: MainWindowViewModel.cs
Akari/Views/: MainWindow.axaml  (+1 more)
Commands/: SwitchPageCommand.cs
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml
crates/akari_ui/: Cargo.toml  style.css
crates/akari_ui/src/: application.rs  lib.rs  sidebar.rs
crates/akari_ui/src/applications/: books.rs
crates/akari_ui/src/components/: sidebar.rs
crates/akari_ui/src/hooks/: mod.rs  use_sidebar.rs
crates/akari_ui/src/icons/: book_open.rs  calendar_days.rs  cog_8_tooth.rs  document_plus.rs  mod.rs  outline.rs  pencil_square.rs  solid.rs
crates/akari_ui/src/screens/: book.rs  books.rs  calender.rs  home.rs  mod.rs  scribe.rs  settings.rs
crates/akari_ui/tailwind/: generate_tailwind.rs
src/: closures.rs  main.rs
(+22 files in other folders)
