[package]
name = "akari"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.23.0"
hashbrown = "0.13.2"
once_cell = "1.17.1"
vizia = { git = "https://github.com/DasLixou/vizia", branch = "event-relative-bounding-pos" }

[patch.crates-io]
femtovg = { git = "https://github.com/DasLixou/femtovg", branch = "const-paint" }
