[package]
name = "akari_ui"
version = "0.1.0"
edition = "2021"
build = "tailwind/generate_tailwind.rs"

[dependencies]
akari_books = { path = "../akari_books" }
const_format = "0.2.30"
dioxus = { version = "0.2.4", features = ["desktop", "fermi"] }
log = "0.4.17"

[build-dependencies]
duct = "0.13.6"
